...
		static let descriptionText4 = "AppStrings.ExposureNotificationSetting.descriptionText4"
		static let enableTracing = "AppStrings.ExposureNotificationSetting.enableTracing"
	}
	
	enum NotificationSettings {
		enum DeltaOnboarding {
			static let imageOn = "AppStrings.NotificationSettings.imageDescriptionOn"
			static let imageOff = "AppStrings.NotificationSettings.imageDescriptionOff"
			static let description = "AppStrings.NotificationSettings.DeltaOnboarding.description"
		}
		static let notifications = "AppStrings.NotificationSettings.notifications"
		static let notificationsOn = "AppStrings.NotificationSettings.notificationsOn"
		static let notificationsOff = "AppStrings.NotificationSettings.notificationsOff"
		
		static let bulletDescOn = "AppStrings.NotificationSettings.bulletDescOn"
		static let bulletDescOff = "AppStrings.NotificationSettings.bulletDescOff"
		static let bulletPoint1 = "AppStrings.NotificationSettings.bulletPoint1"
		static let bulletPoint2 = "AppStrings.NotificationSettings.bulletPoint2"
		static let bulletPoint3 = "AppStrings.NotificationSettings.bulletPoint3"
		static let bulletDesc2 = "AppStrings.NotificationSettings.bulletDesc2"
		
		static let openSystemSettings = "AppStrings.NotificationSettings.openSystemSettings"
		static let close = "AppStrings.NotificationSettings.DeltaOnboarding.primaryButtonTitle"
	}
	
	enum Home {
		static let leftBarButtonDescription = "AppStrings.Home.leftBarButtonDescription"
		static let rightBarButtonDescription = "AppStrings.Home.rightBarButtonDescription"
...
			static let submittedAntigenCell = "AccessibilityIdentifiers.Home.submittedAntigenCell"
			static let removeTestButton = "AppStrings.Home.TestResult.ShownPositive.removeTestButton"
			static let deleteAlertDeleteButton = "AppStrings.Home.TestResult.ShownPositive.deleteAlertDeleteButton"
		}

		enum MoreInfoCell {
			static let moreCell = "AppStrings.Home.moreCell"

			static let settingsLabel = "AppStrings.Home.settingsActionView"
			static let recycleBinLabel = "AppStrings.Home.recycleBinActionView"
			static let appInformationLabel = "AppStrings.Home.appInformationActionView"
			static let faqLabel = "AppStrings.Home.faqActionView"
			static let socialMediaLabel = "AppStrings.Home.socialMediaActionView"
			static let shareLabel = "AppStrings.Home.shareActionView"
		}
...
		static let itemCell = "RecycleBin.itemCell"
		static let restorationConfirmationButton = "RecycleBin.restorationConfirmationButton"
		static let emptyState = "RecycleBin.emptyState"
	}
	
	enum Settings {
		static let tracingLabel = "AppStrings.Settings.tracingLabel"
		static let notificationLabel = "AppStrings.Settings.notificationLabel"
		static let backgroundAppRefreshLabel = "AppStrings.Settings.backgroundAppRefreshLabel"
		static let resetLabel = "AppStrings.Settings.resetLabel"
		static let backgroundAppRefreshImageDescription = "AppStrings.Settings.backgroundAppRefreshImageDescription"
		static let dataDonation = "AppStrings.Settings.Datadonation.description"
	}
	
	enum AppInformation {
		static let newFeaturesNavigation = "AppStrings.AppInformation.newFeaturesNavigation"
		static let aboutNavigation = "AppStrings.AppInformation.aboutNavigation"
		static let termsNavigation = "AppStrings.AppInformation.termsNavigation"
...
